--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <h1> Ryu Hayabusa </h1>
-    <p>A ninja, <strong>Ryu Hayabusa</strong> , a human-dragon hybrid known as the strongest of his clan.</p>
+    <p>A ninja, <strong>Ryu Hayabusa</strong> , a human-dragon hybrid known as the strongest of his clan. Here is some extra information on the character:
+    <a href="https://en.wikipedia.org/wiki/Ryu_Hayabusa" title = Hayabusa> Information </a>
+    </p>
     <img 
         src="https://upload.wikimedia.org/wikipedia/en/7/71/Ryu_Hayabusa.png"
         alt="Hayabusa"
     />
-    <h1> A useful website </h1>
-    <a href="https://www.google.com/" title = Google> Really Useful Website </a>
   </body>
 </html>
