--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>CSC 193 Assignment 2</title>
   </head>
   <body>
-    <h1> Ryu Hayabusa </h1>
-    <p>A ninja, <strong>Ryu Hayabusa</strong> , a human-dragon hybrid known as the strongest of his clan. Here is some extra information on the character:
-    <a href="https://en.wikipedia.org/wiki/Ryu_Hayabusa" title = Hayabusa> Information </a>
+    <h1> CSC 193 Assignment 2 </h1>
+    <p> Martial Arts, <strong>a system of combat</strong> , are commonly thought of as simply for fighting. Though this is not true as there are also
+      ceremonial martial arts that have no combat use. An example would be performative martial arts, such as Wushu or Tai Chi.
+    <a href="https://en.wikipedia.org/wiki/Martial_arts" title = MartialArts> More information on Martial Arts </a>
     </p>
     <img 
-        src="https://upload.wikimedia.org/wikipedia/en/7/71/Ryu_Hayabusa.png"
-        alt="Hayabusa"
+        src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Cai_Jia_Nanquan.JPG"
+        alt="Wushu"
     />
   </body>
 </html>
